--- a/index.html
+++ b/index.html
@@ -20,12 +20,24 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3955134735"/>
   <link rel="stylesheet" type="text/css" href="css/index.css?crc=172227292" id="pagesheet"/>
   <!-- JS includes -->
-  <script src="https://use.typekit.net/ik/BvGPfbH0AcPYDsL3_zCZqbtFAJH3mLDhooVJYcsahv9fenvgfVh3D6jPHQID52jawQwDWDShZQ4cjcbkwRSh5A4RFQ9oZcI3wDBKwhwDwQ9uwQZKeqG7OcuyZeyuShykZA9l-ko1-WsGiAJ0-AvCdABq-YmD-Y48ZPunOciTieyujKoTdkUaiaS0dABq-YmD-Y48ZPunOciTieyujKoTdkJejAs8deU8JymldhoXShmkScBXOABCiemkdcBXZWw7fbRaPyMMeMI6MKGHf5eqMyMgeMI6MqGIQWmDZZMgc5fXhM9.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/_rz37svYNfu9RlCxeVW5ZSh8oY021U45CwWBW2jpn2IfenvgfVh3D6jPHQID52jawQwDWDShZQ4cjcbkwRSh5A4RFQ9oZcI3wDBKwhwDwQ9uwQZKeqG7OcuyZeyuShykZA9l-ko1-WsGiAJ0-AvCdABq-YmD-Y48ZPunOciTieyujKoTdkUaiaS0dABq-YmD-Y48ZPunOciTieyujKoTdkJejAs8deU8JymldhoXShmkScBXOABCiemkdcBXZWw7fbRaPyMMeMI6MKGHf5eqMyMgeMI6MqGIQWmDZZMgUjeuhM9.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
 </script>
-    <!--HTML Widget code-->
+    <!--custom head HTML-->
+  <script src="http://code.jquery.com/jquery-latest.js"></script>
+
+<style type="text/css">
+
+body {
+
+visibility: visible !important;
+
+}
+
+</style>
+  <!--HTML Widget code-->
   
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js"></script>
 <script>
